--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <title>Send us a message form</title>
 </head>
@@ -11,8 +12,35 @@
 
   <section>
     <div class="container">
-      <div class="left-container"></div>
-      <div class="right-container"></div>
+      <div class="left-container">
+        <div class="block">
+        <i class="fa-solid fa-location-dot"></i>
+        <p class="bold">Address</p>
+        <p class="description">1313 Webfoot Walk, Duckburg, Calisota</p>
+      </div>
+      <div class="block">
+        <i class="fa-solid fa-phone"></i>
+        <p class="bold">Phone</p>
+        <p class="description">42434342442</p>
+        <p class="description">24232323244</p>
+      </div>
+      <div class="block">
+        <i class="fa-solid fa-envelope"></i>
+        <p class="bold">Email</p>
+        <p class="description">example@gmail.com</p>
+        <p class="description">example2@gmail.com</p>
+      </div>
+      </div>
+    <div class="right-container">
+        <p class="bold bold-purple">Send us a message</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel neque magnam officia dolor eaque similique sit veniam, vero aut eos?</p>
+        <input type="text" placeholder="Enter your name">
+        <input type="text" placeholder="Enter your email">
+        <input type="text" placeholder="Enter your message" class="message">
+        <div class="bt">
+          <button>Send Now</button>
+      </div>
+        </div>
     </div>
   </section>
   
